--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<hi>Hello punks my name is John Cena and welcome to my website</h1>
+<hi>"color= FFF000"Hello punks my name is John Cena and welcome to my website</h1>
+
+
