--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<hi>"color= FFF000"Hello punks my name is John Cena and welcome to my website</h1>
+<h1>"color= FFF000"Hi, I'm Artem and I like Pizza</h3>
 
 
